# open5gs

configs/stable-configs/: amf.yaml  ausf.yaml  bsf.yaml  hss.yaml  mme.yaml  nrf.yaml  nssf.yaml  pcf.yaml  pcrf.yaml  scp.yaml  sgwc.yaml  sgwu.yaml  smf.yaml  udm.yaml  udr.yaml  upf.yaml
lib/: meson.build
lib/tc/: convert_util.c  convert_util.h  meson.build  tc_server.c  tc_server.h
src/amf/: gmm-handler.c
src/upf/: gtp-path.c
webui/server/: index.js
